k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: satellite-system
  labels:
    name: satellite-system
    app: satellite
